fix: restore Android startup and bound catalog reads (#164)