@@ -17,12 +17,12 @@ public class VerifiedPackFilesTest {
         File target = folder.newFile("core.db");
         File marker = folder.newFile("core.db.sha256");
         File stamp = folder.newFile("core.db.validated");
-        Files.writeString(target.toPath(), "old");
+        Files.write(target.toPath(), "old".getBytes(StandardCharsets.UTF_8));
         byte[] bytes = "verified new core".getBytes(StandardCharsets.UTF_8);
         String checksum = HexFormat.of().formatHex(MessageDigest.getInstance("SHA-256").digest(bytes));
         VerifiedPackFiles.install(new ByteArrayInputStream(bytes), target, marker, stamp, checksum);
         assertArrayEquals(bytes, Files.readAllBytes(target.toPath()));
-        assertEquals(checksum, Files.readString(marker.toPath()).trim());
+        assertEquals(checksum, new String(Files.readAllBytes(marker.toPath()), StandardCharsets.UTF_8).trim());
         assertFalse(stamp.exists());
         assertFalse(new File(folder.getRoot(), "core.db.backup").exists());
     }
@@ -31,12 +31,12 @@ public class VerifiedPackFilesTest {
         File target = folder.newFile("core.db");
         File marker = folder.newFile("core.db.sha256");
         File stamp = folder.newFile("core.db.validated");
-        Files.writeString(target.toPath(), "old");
-        Files.writeString(marker.toPath(), "prior-checksum");
+        Files.write(target.toPath(), "old".getBytes(StandardCharsets.UTF_8));
+        Files.write(marker.toPath(), "prior-checksum".getBytes(StandardCharsets.UTF_8));
         assertThrows(IOException.class, () -> VerifiedPackFiles.install(
             new ByteArrayInputStream(new byte[] {1, 2}), target, marker, stamp, "0".repeat(64)));
-        assertEquals("old", Files.readString(target.toPath()));
-        assertEquals("prior-checksum", Files.readString(marker.toPath()));
+        assertEquals("old", new String(Files.readAllBytes(target.toPath()), StandardCharsets.UTF_8));
+        assertEquals("prior-checksum", new String(Files.readAllBytes(marker.toPath()), StandardCharsets.UTF_8));
         assertTrue(stamp.exists());
         assertFalse(new File(folder.getRoot(), "core.db.tmp").exists());
     }
